--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -24,7 +24,7 @@ jobs:
           aws-region: ap-northeast-1
 
       - name: Sync up to CodeCommit
-        uses: youyo/sync-up-to-codecommit-action@v1
+        uses: mars0426/CodeCommit@v1
         with:
           repository_name: DemoGitRepo
           aws_region: ap-northeast-1
